Increased width to avoid wrapping for long station names.

--- a/assets/css/v2/pre_fare/normal_header.scss
+++ b/assets/css/v2/pre_fare/normal_header.scss
@@ -16,7 +16,7 @@
 }
 
 .normal-header-title {
-  width: 824px;
+  width: 1040px;
   position: absolute;
   left: 40px;
   bottom: 40px;
